--- a/package.json
+++ b/package.json
@@ -3,10 +3,18 @@
   "version": "1.0.0",
   "description": "Zoom Clone using WebRTC and Websockets",
   "license": "CSS",
+  "scripts": {
+    "dev": "nodemon"
+  },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.5",
     "@babel/node": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "express": "^4.17.2",
+    "pug": "^3.0.2"
   }
 }
